@@ -34,6 +34,10 @@ connections. The default is one half of the number of server threads.
 .TP
 .B sssvlv\-maxkeys <num>
 Set the maximum number of keys allowed in a sort request. The default is 5.
+.TP
+.B sssvlv\-maxperconn <num>
+Set the maximum number of concurrent paged search requests per connection. The default is 5. The number of concurrent requests remains limited by
+.B sssvlv-max.
 .SH FILES
 .TP
 ETCDIR/slapd.conf
